[gd_scene load_steps=9 format=3 uid="uid://cdxibq3poj3dt"]

[ext_resource type="Script" uid="uid://bsv1jmdmw7teh" path="res://Scripts/card_manager.gd" id="1_jjvhh"]
[ext_resource type="PackedScene" uid="uid://brjx01l6ipiq1" path="res://Scenes/card_slot.tscn" id="2_kry3j"]
[ext_resource type="Script" uid="uid://bly0ktcxuqq7" path="res://Scripts/player_hand.gd" id="3_21xkr"]
[ext_resource type="Texture2D" uid="uid://2wdhrm5e06j" path="res://Assets/cardBacks.png" id="4_6bp64"]
[ext_resource type="Script" uid="uid://bu4qpdcnhn7mr" path="res://Scripts/deck.gd" id="4_kry3j"]
[ext_resource type="Texture2D" uid="uid://ds6t544dl1yau" path="res://Assets/pixelCardAssest_V01.png" id="6_6bp64"]
[ext_resource type="Script" uid="uid://mjpdpsxerwcp" path="res://Scripts/input_manager.gd" id="6_21xkr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h2yge"]
size = Vector2(100, 128)

[node name="Main" type="Node2D"]

[node name="CardManager" type="Node2D" parent="."]
script = ExtResource("1_jjvhh")

[node name="PlayerHand" type="Node2D" parent="."]
script = ExtResource("3_21xkr")

[node name="Deck" type="Node2D" parent="."]
position = Vector2(150, 890)
script = ExtResource("4_kry3j")

[node name="Deck" type="Sprite2D" parent="Deck"]
texture_filter = 1
scale = Vector2(2, 2)
texture = ExtResource("4_6bp64")
region_enabled = true
region_rect = Rect2(14, 12, 96, 128)

[node name="Empty Deck" type="Sprite2D" parent="Deck"]
texture_filter = 1
scale = Vector2(2, 2)
texture = ExtResource("6_6bp64")
region_enabled = true
region_rect = Rect2(115, 473, 100, 128)

[node name="Area2D" type="Area2D" parent="Deck"]
scale = Vector2(2, 2)
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Deck/Area2D"]
shape = SubResource("RectangleShape2D_h2yge")

[node name="DeckCount" type="RichTextLabel" parent="Deck"]
modulate = Color(0, 0, 0, 1)
offset_left = -100.0
offset_top = -176.0
offset_right = -60.0
offset_bottom = -136.0
text = "0"

[node name="InputManager" type="Node2D" parent="."]
script = ExtResource("6_21xkr")

[node name="CardSlots" type="Node2D" parent="."]

[node name="CardSlot" parent="CardSlots" instance=ExtResource("2_kry3j")]
position = Vector2(608, 501)

[node name="CardSlot3" parent="CardSlots" instance=ExtResource("2_kry3j")]
position = Vector2(1097, 498)

[node name="CardSlot4" parent="CardSlots" instance=ExtResource("2_kry3j")]
position = Vector2(1348, 498)

[node name="CardSlot2" parent="CardSlots" instance=ExtResource("2_kry3j")]
position = Vector2(856, 497)
